Blender crashes from Scripted Expression in Driver (crash in depsgraph) #47266

Closed
opened 2016-01-28 15:52:02 +01:00 by Raphael Stoeckli · 9 comments

System Information
Windows 7 x64
Various Graphics Cards (Nvidia GTX and Mobile)

Blender Version
Broken: 2.76, 2.76b, 2.76 RC
Worked: ---

Short description of error
There seems to be a problem with the "Scripted Expression" function for Drivers. Blender crashes under some circumstances from the stated expression.
The colsole output from the crash is "Error: EXCEPTION_ACCESS_VIOLATION".
See attached file to reproduce the crash.

Exact steps for others to reproduce the error

  • Open the .blend file
  • Run the python script (in the text editor)
  • Click on "Update Dependencies" in the Graph Editor (Driver for Object "Cube")
  • Click on the plane (in the 3D window)
  • Change the value of the custom property "prop" (connected with the mentioned driver) from 1 to 0
  • Blender crashes immediately

Remarks: Although it might be an erroneous python script or a wrong invocation, Blender should not crash from this.

blender_driver_crash.blend

**System Information** Windows 7 x64 Various Graphics Cards (Nvidia GTX and Mobile) **Blender Version** Broken: 2.76, 2.76b, 2.76 RC Worked: --- **Short description of error** There seems to be a problem with the "Scripted Expression" function for Drivers. Blender crashes under some circumstances from the stated expression. The colsole output from the crash is "Error: EXCEPTION_ACCESS_VIOLATION". See attached file to reproduce the crash. **Exact steps for others to reproduce the error** - Open the .blend file - Run the python script (in the text editor) - Click on "Update Dependencies" in the Graph Editor (Driver for Object "Cube") - Click on the plane (in the 3D window) - Change the value of the custom property "prop" (connected with the mentioned driver) from 1 to 0 - Blender crashes immediately Remarks: Although it might be an erroneous python script or a wrong invocation, Blender should not crash from this. [blender_driver_crash.blend](https://archive.blender.org/developer/F278045/blender_driver_crash.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @RaphaelStoeckli

Added subscriber: @RaphaelStoeckli

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Added subscribers: @Sergey, @ideasman42

Added subscribers: @Sergey, @ideasman42

This is caused by the update callback freeing the depsgraph.
P319

Note that the new depsgraph doesn't have this bug. (Run Blender with --enable-new-depsgraph), since its really tagging (instead of performing the free immediately).

@Sergey, if we're not intending to remove the old depsgraph soon, anything against making the old depsgraph use a tag too?

This is caused by the update callback freeing the depsgraph. [P319](https://archive.blender.org/developer/P319.txt) Note that the new depsgraph doesn't have this bug. (Run Blender with `--enable-new-depsgraph`), since its really tagging (instead of performing the free immediately). @Sergey, if we're not intending to remove the old depsgraph soon, anything against making the old depsgraph use a tag too?
Sergey Sharybin was assigned by Campbell Barton 2016-01-29 01:06:28 +01:00
Campbell Barton changed title from Blender crashes from Scripted Expression in Driver (EXCEPTION_ACCESS_VIOLATION) to Blender crashes from Scripted Expression in Driver (crash in depsgraph) 2016-01-29 01:16:06 +01:00

@ideasman42, While delaying actual free will make this case working, it's in fact opening a huge can of warms -- relations update triggered by the scene evaluaiton. This should be avoid in general. In practice i don't really know good and robust solution atm.

@ideasman42, While delaying actual free will make this case working, it's in fact opening a huge can of warms -- relations update triggered by the scene evaluaiton. This should be avoid in general. In practice i don't really know good and robust solution atm.

While --enable-new-depsgraph seems to avoid the crash, it seems to erase the driver on the object instead (tested on the posted file). Maybe topic for a new ticket?
@Sergey Could a workaround be to catch at least the error (the code is in C++ ?) with try/catch and an error message as console ouptput to avoid the hard crash of Blender?

While --enable-new-depsgraph seems to avoid the crash, it seems to erase the driver on the object instead (tested on the posted file). Maybe topic for a new ticket? @Sergey Could a workaround be to catch at least the error (the code is in C++ ?) with try/catch and an error message as console ouptput to avoid the hard crash of Blender?

This issue was referenced by 87cbcd697b

This issue was referenced by 87cbcd697b778b8c5500634a5193bdf67700b3a6

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47266
No description provided.